<resources>
    <string name="app_name">Schedule</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="schedule">课程表</string>
    <string name="schedule_transition">schedule_transition</string>
    <string name="menu_schedule_switch">切换视图</string>
    <string-array name="dayOfWeek">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

</resources>
